Update script to use runtime instead of containers